# postgresql-named

./: README.md  cabal.project  postgresql-named.cabal  stack.yaml
src/Database/PostgreSQL/Simple/FromRow/: Named.hs
test/: CatDb.hs  Main.hs  Spec.hs
test/Database/PostgreSQL/Simple/FromRow/: NamedSpec.hs
