cabal-version: 3.0

name: postgresql-named
version: 0.1.0.0
tested-with: 
  , GHC == 9.2.5
  , GHC == 9.4.4

synopsis: Generic deserialization of PostgreSQL rows based on column names
description: See README.md
category: Web

author: Moritz Kiefer
maintainer: moritz.kiefer@purelyfunctional.org
homepage: https://github.com/cocreature/postgresql-named#readme

license: BSD-3-Clause
license-file: LICENSE
copyright: (C) 2017 Moritz Kiefer

extra-source-files:  
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/cocreature/postgresql-named


flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True


common shared
  default-language: Haskell2010

  default-extensions:
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RecordWildCards

  ghc-options:
    -Weverything 
    -Wno-all-missed-specialisations 
    -Wno-identities
    -Wno-implicit-prelude 
    -Wno-missed-specialisations 
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures 
    -Wno-missing-import-lists 
    -Wno-missing-local-signatures 
    -Wno-monomorphism-restriction 
    -Wno-safe 
    -Wno-unsafe 
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-missing-kind-signatures
    -Werror=incomplete-patterns

  if flag(pedantic)
    ghc-options:
      -Werror

  build-depends:
    , base >=4.7 && <5

  autogen-modules:
    Paths_postgresql_named
    
  other-modules:
    Paths_postgresql_named


common shared-exe
  import:
    , shared

  build-depends:
    , postgresql-named

  ghc-options:
    -threaded 
    -rtsopts 
    -with-rtsopts=-N


library
  import: shared

  hs-source-dirs: src

  build-depends:
    , bytestring >= 0.11 && < 0.12
    , mtl >= 2.2 && < 2.3
    , postgresql-libpq >= 0.9 && < 0.10
    , postgresql-simple >= 0.6 && < 0.7



  exposed-modules:
    Database.PostgreSQL.Simple.FromRow.Named


test-suite postgresql-named-test
  import: shared-exe

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs

  build-tool-depends:
    , hspec-discover:hspec-discover

  build-depends:
    , hspec >= 2.9 && < 2.11
    , postgresql-simple
    , resource-pool >= 0.3 && < 0.4
    , text
    , time
    , tmp-postgres >= 1.34 && < 1.35

  other-modules:
    CatDb
    Database.PostgreSQL.Simple.FromRow.NamedSpec
    Spec
